--- a/InsereQuestao.html
+++ b/InsereQuestao.html
@@ -13,8 +13,8 @@
     <link href="http://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="javascript/scriptpagina.js"></script>
     <script type="text/javascript" src="javascript/jquery.maskedinput.js"></script>
+    <script type="text/javascript" src="javascript/scriptpagina.obfuscated.js"></script>
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
