Subindo alterações recentes

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <script type="text/javascript" src="javascript/jquery.js"></script>
     <link rel="icon" type="../image/png" sizes="25x17" href="images/logo16x16.png">
@@ -121,6 +120,9 @@
             </li>
             <li id="navbarSair">
                 <a onclick="Deslogar();">Sair</a>
+            </li>
+            <li>
+                &nbsp;
             </li>
         </ul>
     </div>
